@@ -232,6 +232,12 @@
                 <version>1.3.170</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>42.1.4</version>
+            </dependency>
+
             <!-- jetty -->
             <dependency>
                 <groupId>org.eclipse.jetty</groupId>
